@@ -6,14 +6,19 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.io.OutputStream;
+import java.io.PrintWriter;
+import java.io.StringWriter;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Date;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 
+import javax.mail.MessagingException;
 import javax.persistence.EntityNotFoundException;
 import javax.servlet.http.HttpServletResponse;
 
@@ -23,9 +28,6 @@ import org.apache.commons.csv.CSVRecord;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.context.MessageSource;
-import org.springframework.context.i18n.LocaleContextHolder;
-import org.springframework.context.support.DefaultMessageSourceResolvable;
 import org.springframework.core.env.Environment;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
@@ -44,13 +46,13 @@ import org.springframework.web.multipart.MultipartFile;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 
+import gov.healthit.chpl.auth.EmailBuilder;
 import gov.healthit.chpl.auth.Util;
 import gov.healthit.chpl.caching.CacheNames;
 import gov.healthit.chpl.domain.CertifiedProduct;
 import gov.healthit.chpl.domain.CertifiedProductSearchDetails;
 import gov.healthit.chpl.domain.IcsFamilyTreeNode;
 import gov.healthit.chpl.domain.IdListContainer;
-import gov.healthit.chpl.domain.Job;
 import gov.healthit.chpl.domain.ListingUpdateRequest;
 import gov.healthit.chpl.domain.PendingCertifiedProductDetails;
 import gov.healthit.chpl.domain.concept.ActivityConcept;
@@ -75,6 +77,7 @@ import gov.healthit.chpl.manager.PendingCertifiedProductManager;
 import gov.healthit.chpl.upload.certifiedProduct.CertifiedProductUploadHandler;
 import gov.healthit.chpl.upload.certifiedProduct.CertifiedProductUploadHandlerFactory;
 import gov.healthit.chpl.util.ChplProductNumberUtil;
+import gov.healthit.chpl.util.ErrorMessageUtil;
 import gov.healthit.chpl.validation.listing.ListingValidatorFactory;
 import gov.healthit.chpl.validation.listing.PendingValidator;
 import gov.healthit.chpl.validation.listing.Validator;
@@ -86,8 +89,6 @@ import io.swagger.annotations.ApiOperation;
 
 /**
  * Certified Product Controller.
- * @author alarned
- *
  */
 @Api(value = "certified-products")
 @RestController
@@ -124,7 +125,7 @@ public class CertifiedProductController {
     private Environment env;
 
     @Autowired
-    private MessageSource messageSource;
+    private ErrorMessageUtil msgUtil;
 
     @Autowired
     private ChplProductNumberUtil chplProductNumberUtil;
@@ -138,7 +139,7 @@ public class CertifiedProductController {
      */
     @ApiOperation(value = "List all certified products",
             notes = "Default behavior is to return all certified products in the system. "
-                    + " The optional 'versionId' parameter filters the certified products to those"
+                    + " The required 'versionId' parameter filters the certified products to those"
                     + " assigned to that version. The 'editable' parameter will return only those"
                     + " certified products that the logged in user has permission to edit as "
                     + " determined by ACB roles and authorities. Not all information about "
@@ -175,13 +176,12 @@ public class CertifiedProductController {
     @ApiOperation(value = "Get all details for a specified certified product.",
             notes = "Returns all information in the CHPL related to the specified certified product.")
     @RequestMapping(value = "/{certifiedProductId:^-?\\d+$}/details",
-                    method = RequestMethod.GET,
-                    produces = "application/json; charset=utf-8")
+    method = RequestMethod.GET,
+    produces = "application/json; charset=utf-8")
     public @ResponseBody CertifiedProductSearchDetails getCertifiedProductById(
             @PathVariable("certifiedProductId") final Long certifiedProductId) throws EntityRetrievalException {
 
-        CertifiedProductSearchDetails certifiedProduct = 
-                cpdManager.getCertifiedProductDetails(Long.valueOf(certifiedProductId));
+        CertifiedProductSearchDetails certifiedProduct = cpdManager.getCertifiedProductDetails(certifiedProductId);
         certifiedProduct = validateCertifiedProduct(certifiedProduct);
 
         return certifiedProduct;
@@ -195,8 +195,8 @@ public class CertifiedProductController {
                     + "/certified_products/YY.99.99.9999.XXXX.99.99.9.YYMMDD/details")
     @RequestMapping(value = "/{year}.{testingLab}.{certBody}.{vendorCode}.{productCode}.{versionCode}.{icsCode}."
             + "{addlSoftwareCode}.{certDateCode}/details",
-                    method = RequestMethod.GET,
-                    produces = "application/json; charset=utf-8")
+            method = RequestMethod.GET,
+            produces = "application/json; charset=utf-8")
     public @ResponseBody CertifiedProductSearchDetails getCertifiedProductByChplProductNumber(
             @PathVariable("year") final String year,
             @PathVariable("testingLab") final String testingLab,
@@ -213,7 +213,7 @@ public class CertifiedProductController {
                         versionCode, icsCode, addlSoftwareCode, certDateCode);
 
         CertifiedProductSearchDetails certifiedProduct =
-                cpdManager.getCertifiedProductDetailsByChplProductNumber(chplProductNumber.toString());
+                cpdManager.getCertifiedProductDetailsByChplProductNumber(chplProductNumber);
 
         Validator validator = validatorFactory.getValidator(certifiedProduct);
         if (validator != null) {
@@ -228,8 +228,8 @@ public class CertifiedProductController {
                     + "{chplPrefix}-{identifier} represents a valid legacy CHPL Product Number.  A valid call "
                     + "to this service would look like /certified_products/CHP-999999.")
     @RequestMapping(value = "/{chplPrefix}-{identifier}/details",
-                    method = RequestMethod.GET,
-                    produces = "application/json; charset=utf-8")
+    method = RequestMethod.GET,
+    produces = "application/json; charset=utf-8")
     public @ResponseBody CertifiedProductSearchDetails getCertifiedProductByChplProductNumber2(
             @PathVariable("chplPrefix") final String chplPrefix,
             @PathVariable("identifier") final String identifier) throws EntityRetrievalException {
@@ -237,7 +237,7 @@ public class CertifiedProductController {
         String chplProductNumber = chplProductNumberUtil.getChplProductNumber(chplPrefix, identifier);
 
         CertifiedProductSearchDetails certifiedProduct =
-                cpdManager.getCertifiedProductDetailsByChplProductNumber(chplProductNumber.toString());
+                cpdManager.getCertifiedProductDetailsByChplProductNumber(chplProductNumber);
 
         certifiedProduct = validateCertifiedProduct(certifiedProduct);
 
@@ -245,11 +245,11 @@ public class CertifiedProductController {
     }
 
     @ApiOperation(value = "Get all basic information for a specified certified product.  Does not include "
-                            + "the CQM results and certification results.",
+            + "the CQM results and certification results.",
             notes = "Returns basic information in the CHPL related to the specified certified product.  "
                     + "The results will not include the CQM results and certification results.")
     @RequestMapping(value = "/{certifiedProductId:^-?\\d+$}",
-                    method = RequestMethod.GET,
+    method = RequestMethod.GET,
     produces = "application/json; charset=utf-8")
     public @ResponseBody CertifiedProductSearchDetails getCertifiedProductByIdBasic(
             @PathVariable("certifiedProductId") final Long certifiedProductId) throws EntityRetrievalException {
@@ -261,17 +261,17 @@ public class CertifiedProductController {
     }
 
     @ApiOperation(value = "Get all basic information for a specified certified product.  Does not include "
-                        + "the CQM results and certification results.",
+            + "the CQM results and certification results.",
             notes = "Returns basic information in the CHPL related to the specified certified product.  "
-                        + "The results will not include the CQM results and certification results.  "
-                        + "{year}.{testingLab}.{certBody}.{vendorCode}.{productCode}.{versionCode}.{icsCode}."
-                        + "{addlSoftwareCode}.{certDateCode} represents a valid CHPL Product Number.  A valid "
-                        + "call to this service would look like /certified_products/YY.99.99.9999.XXXX.99.99.9."
-                        + "YYMMDD.")
+                    + "The results will not include the CQM results and certification results.  "
+                    + "{year}.{testingLab}.{certBody}.{vendorCode}.{productCode}.{versionCode}.{icsCode}."
+                    + "{addlSoftwareCode}.{certDateCode} represents a valid CHPL Product Number.  A valid "
+                    + "call to this service would look like /certified_products/YY.99.99.9999.XXXX.99.99.9."
+                    + "YYMMDD.")
     @RequestMapping(value = "/{year}.{testingLab}.{certBody}.{vendorCode}.{productCode}.{versionCode}.{icsCode}."
             + "{addlSoftwareCode}.{certDateCode}",
-                    method = RequestMethod.GET,
-                    produces = "application/json; charset=utf-8")
+            method = RequestMethod.GET,
+            produces = "application/json; charset=utf-8")
     public @ResponseBody CertifiedProductSearchDetails getCertifiedProductByChplProductNumberBasic(
             @PathVariable("year") final String year,
             @PathVariable("testingLab") final String testingLab,
@@ -288,7 +288,7 @@ public class CertifiedProductController {
                         versionCode, icsCode, addlSoftwareCode, certDateCode);
 
         CertifiedProductSearchDetails certifiedProduct =
-                cpdManager.getCertifiedProductDetailsBasicByChplProductNumber(chplProductNumber.toString());
+                cpdManager.getCertifiedProductDetailsBasicByChplProductNumber(chplProductNumber);
 
         certifiedProduct = validateCertifiedProduct(certifiedProduct);
 
@@ -296,14 +296,14 @@ public class CertifiedProductController {
     }
 
     @ApiOperation(value = "Get all basic information for a specified certified product.  Does not include "
-                        + "the CQM results and certification results.",
+            + "the CQM results and certification results.",
             notes = "Returns basic information in the CHPL related to the specified certified product.  "
                     + "The results will not include the CQM results and certification results.  "
                     + "{chplPrefix}-{identifier} represents a valid legacy CHPL Product Number.  A valid call to "
                     + "this service would look like /certified_products/CHP-999999.")
     @RequestMapping(value = "/{chplPrefix}-{identifier}",
-                    method = RequestMethod.GET,
-                    produces = "application/json; charset=utf-8")
+    method = RequestMethod.GET,
+    produces = "application/json; charset=utf-8")
     public @ResponseBody CertifiedProductSearchDetails getCertifiedProductByChplProductNumberBasic2(
             @PathVariable("chplPrefix") final String chplPrefix,
             @PathVariable("identifier") final String identifier) throws EntityRetrievalException {
@@ -311,7 +311,7 @@ public class CertifiedProductController {
         String chplProductNumber = chplProductNumberUtil.getChplProductNumber(chplPrefix, identifier);
 
         CertifiedProductSearchDetails certifiedProduct =
-                cpdManager.getCertifiedProductDetailsBasicByChplProductNumber(chplProductNumber.toString());
+                cpdManager.getCertifiedProductDetailsBasicByChplProductNumber(chplProductNumber);
 
         certifiedProduct = validateCertifiedProduct(certifiedProduct);
 
@@ -391,20 +391,22 @@ public class CertifiedProductController {
         return results;
     }
 
-  /**
+    /**
      * Download all SED details that are certified to 170.315(g)(3).
-     * @param response http response
+     * @return an HTTP response
      * @throws EntityRetrievalException if cannot retrieve entity
      * @throws IOException if IO Exception
      */
-    @ApiOperation(value = "Get all of the certification results for a specified certified product based on a CHPL Product Number.",
+    @ApiOperation(value = "Get all of the certification results for a specified certified "
+            + "product based on a CHPL Product Number.",
             notes = "Returns all of the certifiection results in the CHPL related to the specified certified product.  "
-                    + "{year}.{testingLab}.{certBody}.{vendorCode}.{productCode}.{versionCode}.{icsCode}.{addlSoftwareCode}."
-                    + "{certDateCode} represents a valid CHPL Product Number.  A valid call to this service would look like "
+                    + "{year}.{testingLab}.{certBody}.{vendorCode}.{productCode}.{versionCode}.{icsCode}."
+                    + "{addlSoftwareCode}.{certDateCode} represents a valid CHPL Product Number. "
+                    + "A valid call to this service would look like "
                     + "/certified_products/YY.99.99.9999.XXXX.99.99.9.YYMMDD/certification_results.")
     @RequestMapping(value = "/{year}.{testingLab}.{certBody}.{vendorCode}.{productCode}.{versionCode}.{icsCode}.{addlSoftwareCode}"
             + ".{certDateCode}/certification_results", method = RequestMethod.GET,
-    produces = "application/json; charset=utf-8")
+            produces = "application/json; charset=utf-8")
     public @ResponseBody CertificationResults getCertificationResultssByCertifiedProductId(
             @PathVariable("year") final String year,
             @PathVariable("testingLab") final String testingLab,
@@ -451,7 +453,7 @@ public class CertifiedProductController {
      * @throws EntityRetrievalException if cannot retrieve entity
      * @throws IOException if IO Exception
      */
-	@ApiOperation(value = "Download all SED details that are certified to 170.315(g)(3).",
+    @ApiOperation(value = "Download all SED details that are certified to 170.315(g)(3).",
             notes = "Download a specific file that is generated overnight.")
     @RequestMapping(value = "/sed_details", method = RequestMethod.GET)
     public void streamSEDDetailsDocumentContents(final HttpServletResponse response)
@@ -461,32 +463,29 @@ public class CertifiedProductController {
         final int bufferSize = 1024;
         byte[] data = Files.readAllBytes(path);
 
-        if (data != null && data.length > 0) {
-            ByteArrayInputStream inputStream = new ByteArrayInputStream(data);
-            // get MIME type of the file
-            String mimeType = "text/csv";
-            // set content attributes for the response
-            response.setContentType(mimeType);
-            response.setContentLength(data.length);
+        if (data.length > 0) {
+            try (ByteArrayInputStream inputStream = new ByteArrayInputStream(data);
+                    OutputStream outStream = response.getOutputStream()) {
 
-            // set headers for the response
-            String headerKey = "Content-Disposition";
-            String headerValue = String.format("attachment; filename=\"%s\"", downloadFile.getName());
-            response.setHeader(headerKey, headerValue);
+                // get MIME type of the file
+                String mimeType = "text/csv";
+                // set content attributes for the response
+                response.setContentType(mimeType);
+                response.setContentLength(data.length);
 
-            // get output stream of the response
-            OutputStream outStream = response.getOutputStream();
+                // set headers for the response
+                String headerKey = "Content-Disposition";
+                String headerValue = String.format("attachment; filename=\"%s\"", downloadFile.getName());
+                response.setHeader(headerKey, headerValue);
 
-            byte[] buffer = new byte[bufferSize];
-            int bytesRead = -1;
+                byte[] buffer = new byte[bufferSize];
+                int bytesRead = -1;
 
-            // write bytes read from the input stream into the output stream
-            while ((bytesRead = inputStream.read(buffer)) != -1) {
-                outStream.write(buffer, 0, bytesRead);
+                // write bytes read from the input stream into the output stream
+                while ((bytesRead = inputStream.read(buffer)) != -1) {
+                    outStream.write(buffer, 0, bytesRead);
+                }
             }
-
-            inputStream.close();
-            outStream.close();
         }
     }
 
@@ -514,8 +513,8 @@ public class CertifiedProductController {
                     + "YYMMDD/ics_relationships.")
     @RequestMapping(value = "/{year}.{testingLab}.{certBody}.{vendorCode}.{productCode}.{versionCode}.{icsCode}."
             + "{addlSoftwareCode}.{certDateCode}/ics_relationships",
-                    method = RequestMethod.GET,
-    produces = "application/json; charset=utf-8")
+            method = RequestMethod.GET,
+            produces = "application/json; charset=utf-8")
     public @ResponseBody List<IcsFamilyTreeNode> getIcsFamilyTreeByChplProductNumber(
             @PathVariable("year") final String year,
             @PathVariable("testingLab") final String testingLab,
@@ -565,11 +564,11 @@ public class CertifiedProductController {
      */
     @Deprecated
     @ApiOperation(value = "DEPRECATED.  Update an existing certified product.",
-            notes = "Updates the certified product after first validating the request. The logged in"
-                    + " user must have ROLE_ADMIN or ROLE_ACB and have administrative "
-                    + " authority on the ACB that certified the product. If a different ACB is passed in"
-                    + " as part of the request, an ownership change will take place and the logged in "
-                    + " user must have ROLE_ADMIN.")
+    notes = "Updates the certified product after first validating the request. The logged in"
+            + " user must have ROLE_ADMIN or ROLE_ACB and have administrative "
+            + " authority on the ACB that certified the product. If a different ACB is passed in"
+            + " as part of the request, an ownership change will take place and the logged in "
+            + " user must have ROLE_ADMIN.")
     @RequestMapping(value = "/update", method = RequestMethod.POST, produces = "application/json; charset=utf-8")
     public ResponseEntity<CertifiedProductSearchDetails> updateCertifiedProductDeprecated(
             @RequestBody(required = true) final ListingUpdateRequest updateRequest)
@@ -586,8 +585,8 @@ public class CertifiedProductController {
                     + " authority on the ACB that certified the product. If a different ACB is passed in"
                     + " as part of the request, an ownership change will take place and the logged in "
                     + " user must have ROLE_ADMIN.")
-    @RequestMapping(value = "/{certifiedProductId}", method = RequestMethod.PUT, 
-                    produces = "application/json; charset=utf-8")
+    @RequestMapping(value = "/{certifiedProductId}", method = RequestMethod.PUT,
+    produces = "application/json; charset=utf-8")
     public ResponseEntity<CertifiedProductSearchDetails> updateCertifiedProduct(
             @RequestBody(required = true) final ListingUpdateRequest updateRequest)
                     throws EntityCreationException, EntityRetrievalException, InvalidArgumentsException,
@@ -605,7 +604,7 @@ public class CertifiedProductController {
 
         // clean up what was sent in - some necessary IDs or other fields may be
         // missing
-        Long newAcbId = new Long(updatedListing.getCertifyingBody().get("id").toString());
+        Long newAcbId = Long.valueOf(updatedListing.getCertifyingBody().get("id").toString());
         cpManager.sanitizeUpdatedListingData(newAcbId, updatedListing);
 
         // validate
@@ -647,27 +646,25 @@ public class CertifiedProductController {
                 boolean isDup = cpManager.chplIdExists(updatedListing.getChplProductNumber());
                 if (isDup) {
                     updatedListing.getErrorMessages()
-                    .add(String
-                            .format(messageSource.getMessage(
-                                    new DefaultMessageSourceResolvable("listing.chplProductNumber.changedNotUnique"),
-                                    LocaleContextHolder.getLocale()), updatedListing.getChplProductNumber()));
+                    .add(msgUtil.getMessage("listing.chplProductNumber.changedNotUnique",
+                            updatedListing.getChplProductNumber()));
                 }
             } catch (final EntityRetrievalException ex) {
             }
         }
 
         if (updatedListing.getErrorMessages() != null && updatedListing.getErrorMessages().size() > 0) {
-            for(String err : updatedListing.getErrorMessages()) {
+            for (String err : updatedListing.getErrorMessages()) {
                 LOGGER.error("Error updating listing " + updatedListing.getChplProductNumber() + ": " + err);
             }
             throw new ValidationException(updatedListing.getErrorMessages(), updatedListing.getWarningMessages());
         }
 
-        Long acbId = new Long(existingListing.getCertifyingBody().get("id").toString());
+        Long acbId = Long.parseLong(existingListing.getCertifyingBody().get("id").toString());
 
-        // if the ACF owner is changed this is a separate action with different
+        // if the ACB owner is changed this is a separate action with different
         // security
-        if (newAcbId != null && acbId.longValue() != newAcbId.longValue()) {
+        if (acbId.longValue() != newAcbId.longValue()) {
             cpManager.changeOwnership(updatedListing.getId(), newAcbId);
             CertifiedProductSearchDetails changedProduct = cpdManager
                     .getCertifiedProductDetails(updatedListing.getId());
@@ -697,6 +694,7 @@ public class CertifiedProductController {
      * Get all pending Certified Products.
      * @return list of pending Listings
      * @throws EntityRetrievalException if cannot retrieve entity
+     * @throws AccessDeniedException if user doesn't have access
      */
     @ApiOperation(value = "List pending certified products.",
             notes = "Pending certified products are created via CSV file upload and are left in the 'pending' state "
@@ -706,10 +704,7 @@ public class CertifiedProductController {
             throws EntityRetrievalException, AccessDeniedException {
 
         if (!Util.isUserRoleAcbAdmin()) {
-            throw new AccessDeniedException(String
-                    .format(messageSource.getMessage(
-                            new DefaultMessageSourceResolvable("access.pendingCertifiedProducts"),
-                            LocaleContextHolder.getLocale())));
+            throw new AccessDeniedException(msgUtil.getMessage("access.pendingCertifiedProducts"));
         }
 
         List<CertificationBodyDTO> acbs = acbManager.getAllForUser(false);
@@ -774,8 +769,8 @@ public class CertifiedProductController {
      */
     @Deprecated
     @ApiOperation(value = "DEPRECATED.  Reject a pending certified product.",
-            notes = "Essentially deletes a pending certified product. ROLE_ACB "
-                    + " and administrative authority on the ACB is required.")
+    notes = "Essentially deletes a pending certified product. ROLE_ACB "
+            + " and administrative authority on the ACB is required.")
     @RequestMapping(value = "/pending/{pcpId}/reject", method = RequestMethod.POST,
     produces = "application/json; charset=utf-8")
     public @ResponseBody String rejectPendingCertifiedProductDeprecated(@PathVariable("pcpId") final Long id)
@@ -789,7 +784,7 @@ public class CertifiedProductController {
             notes = "Essentially deletes a pending certified product. ROLE_ACB "
                     + " and administrative authority on the ACB is required.")
     @RequestMapping(value = "/pending/{pcpId}", method = RequestMethod.DELETE,
-                    produces = "application/json; charset=utf-8")
+    produces = "application/json; charset=utf-8")
     public @ResponseBody String rejectPendingCertifiedProduct(@PathVariable("pcpId") final Long id)
             throws EntityRetrievalException, JsonProcessingException, EntityCreationException, EntityNotFoundException,
             AccessDeniedException, ObjectMissingValidationException {
@@ -820,8 +815,8 @@ public class CertifiedProductController {
      */
     @Deprecated
     @ApiOperation(value = "DEPRECATED.  Reject several pending certified products.",
-            notes = "Marks a list of pending certified products as deleted. ROLE_ACB "
-                    + " and administrative authority on the ACB for each pending certified product is required.")
+    notes = "Marks a list of pending certified products as deleted. ROLE_ACB "
+            + " and administrative authority on the ACB for each pending certified product is required.")
     @RequestMapping(value = "/pending/reject", method = RequestMethod.POST,
     produces = "application/json; charset=utf-8")
     public @ResponseBody String rejectPendingCertifiedProductsDeprecated(@RequestBody final IdListContainer idList)
@@ -880,12 +875,12 @@ public class CertifiedProductController {
      */
     @Deprecated
     @ApiOperation(value = "DEPRECATED.  Confirm a pending certified product.",
-            notes = "Creates a new certified product in the system based on all of the information "
-                    + " passed in on the request. This information may differ from what was previously "
-                    + " entered for the pending certified product during upload. It will first be validated "
-                    + " to check for errors, then a new certified product is created, and the old pending certified"
-                    + " product will be removed. ROLE_ACB "
-                    + " and administrative authority on the ACB is required.")
+    notes = "Creates a new certified product in the system based on all of the information "
+            + " passed in on the request. This information may differ from what was previously "
+            + " entered for the pending certified product during upload. It will first be validated "
+            + " to check for errors, then a new certified product is created, and the old pending certified"
+            + " product will be removed. ROLE_ACB "
+            + " and administrative authority on the ACB is required.")
     @RequestMapping(value = "/pending/confirm", method = RequestMethod.POST,
     produces = "application/json; charset=utf-8")
     public synchronized ResponseEntity<CertifiedProductSearchDetails> confirmPendingCertifiedProductDprecated(
@@ -919,14 +914,14 @@ public class CertifiedProductController {
 
     private synchronized ResponseEntity<CertifiedProductSearchDetails> addPendingCertifiedProduct(
             final PendingCertifiedProductDetails pendingCp) throws InvalidArgumentsException, ValidationException,
-                    EntityCreationException, EntityRetrievalException, ObjectMissingValidationException,
-                    IOException {
+    EntityCreationException, EntityRetrievalException, ObjectMissingValidationException,
+    IOException {
 
         String acbIdStr = pendingCp.getCertifyingBody().get("id").toString();
         if (StringUtils.isEmpty(acbIdStr)) {
             throw new InvalidArgumentsException("An ACB ID must be supplied in the request body");
         }
-        Long acbId = new Long(acbIdStr);
+        Long acbId = Long.valueOf(acbIdStr);
         if (pcpManager.isPendingListingAvailableForUpdate(acbId, pendingCp.getId())) {
             PendingCertifiedProductDTO pcpDto = new PendingCertifiedProductDTO(pendingCp);
             PendingValidator validator = validatorFactory.getValidator(pcpDto);
@@ -951,29 +946,6 @@ public class CertifiedProductController {
     }
 
     /**
-     * Upload a file to update number of MUU for each Listing.
-     * @param file the file to upload
-     * @return status of the action
-     * @throws EntityCreationException if entity can not be created
-     * @throws EntityRetrievalException if entity can not be retrieved
-     * @throws ValidationException if validation fails
-     * @throws MaxUploadSizeExceededException if file is too large
-     */
-    @ApiOperation(value = "DEPRECATED. Upload a file to update the number "
-            + "of meaningful use users for each CHPL Product Number",
-            notes = "Accepts a CSV file with chpl_product_number and num_meaningful_use_users "
-                    + "to update the number of meaningful use users for each CHPL Product Number."
-                    + " The user uploading the file must have ROLE_ADMIN or ROLE_ONC_STAFF ")
-    @RequestMapping(value = "/meaningful_use_users/upload", method = RequestMethod.POST,
-    produces = "application/json; charset=utf-8")
-    @Deprecated
-    public @ResponseBody ResponseEntity<Job> uploadMeaningfulUseUsers(@RequestParam("file") final MultipartFile file)
-            throws EntityCreationException, EntityRetrievalException, ValidationException,
-            MaxUploadSizeExceededException {
-        return meaningfulUseController.uploadMeaningfulUseUsers(file);
-    }
-
-    /**
      * Upload a file with certified products.
      * @param file the file
      * @return the list of pending listings
@@ -988,27 +960,22 @@ public class CertifiedProductController {
     public ResponseEntity<PendingCertifiedProductResults> upload(@RequestParam("file") final MultipartFile file)
             throws ValidationException, MaxUploadSizeExceededException {
         if (file.isEmpty()) {
-            throw new ValidationException("You cannot upload an empty file!");
+            throw new ValidationException(msgUtil.getMessage("upload.emptyFile"));
         }
 
         if (!file.getContentType().equalsIgnoreCase("text/csv")
                 && !file.getContentType().equalsIgnoreCase("application/vnd.ms-excel")) {
-            throw new ValidationException("File must be a CSV document.");
+            throw new ValidationException(msgUtil.getMessage("upload.notCSV"));
         }
         HttpHeaders responseHeaders = new HttpHeaders();
         List<PendingCertifiedProductDetails> uploadedProducts = new ArrayList<PendingCertifiedProductDetails>();
 
-        BufferedReader reader = null;
-        CSVParser parser = null;
-        try {
-            reader = new BufferedReader(new InputStreamReader(file.getInputStream()));
-            parser = new CSVParser(reader, CSVFormat.EXCEL);
-
+        try (BufferedReader reader = new BufferedReader(new InputStreamReader(file.getInputStream(), "UTF-8"));
+                CSVParser parser = new CSVParser(reader, CSVFormat.EXCEL)) {
             List<CSVRecord> records = parser.getRecords();
             if (records.size() <= 1) {
-                throw new ValidationException(String
-                        .format(messageSource.getMessage(new DefaultMessageSourceResolvable("listing.upload.emptyRows"),
-                                LocaleContextHolder.getLocale())));
+                throw new ValidationException(
+                        msgUtil.getMessage("listing.upload.emptyRows"));
             }
 
             Set<String> handlerErrors = new HashSet<String>();
@@ -1032,8 +999,7 @@ public class CertifiedProductController {
 
                         if (currStatus.equalsIgnoreCase("NEW")) {
                             if (!currUniqueId.contains("XXXX") && uniqueIdsFromFile.contains(currUniqueId)) {
-                                handlerErrors.add("Multiple products with unique id " + currUniqueId
-                                        + " were found in the file.");
+                                handlerErrors.add(msgUtil.getMessage("upload.duplicateUniqueIds", currUniqueId));
                                 duplicateIdsFromFile.add(currUniqueId);
                             } else {
                                 uniqueIdsFromFile.add(currUniqueId);
@@ -1044,7 +1010,7 @@ public class CertifiedProductController {
                                         CertifiedProductUploadHandler handler = uploadHandlerFactory.getHandler(heading,
                                                 rows);
                                         if (handler.getUploadTemplateVersion() != null
-                                                && handler.getUploadTemplateVersion().getDeprecated() == Boolean.TRUE) {
+                                                && handler.getUploadTemplateVersion().getDeprecated()) {
                                             responseHeaders.set(
                                                     HttpHeaders.WARNING, "299 - \"Deprecated upload template\"");
                                         }
@@ -1069,7 +1035,7 @@ public class CertifiedProductController {
                     try {
                         CertifiedProductUploadHandler handler = uploadHandlerFactory.getHandler(heading, rows);
                         if (handler.getUploadTemplateVersion() != null
-                                && handler.getUploadTemplateVersion().getDeprecated() == Boolean.TRUE) {
+                                && handler.getUploadTemplateVersion().getDeprecated()) {
                             responseHeaders.set(HttpHeaders.WARNING, "299 - \"Deprecated upload template\"");
                         }
                         PendingCertifiedProductEntity pendingCp = handler.handle();
@@ -1101,30 +1067,20 @@ public class CertifiedProductController {
                                 .createOrReplace(cpToAdd.getCertificationBodyId(), cpToAdd);
                         PendingCertifiedProductDetails details = new PendingCertifiedProductDetails(pendingCpDto);
                         uploadedProducts.add(details);
-                    } catch (final EntityCreationException ex) {
+                    } catch (final EntityCreationException | EntityRetrievalException ex) {
                         String error = "Error creating pending certified product " + cpToAdd.getUniqueId()
                         + ". Error was: " + ex.getMessage();
                         LOGGER.error(error);
+                        //send an email to the team that something weird happened
+                        sendUploadError(file, ex);
                         throw new ValidationException(error);
-                    } catch (final EntityRetrievalException ex) {
-                        LOGGER.error("Error retreiving pending certified product.", ex);
                     }
                 }
             }
         } catch (final IOException ioEx) {
             LOGGER.error("Could not get input stream for uploaded file " + file.getName());
-            throw new ValidationException(String
-                    .format(messageSource.getMessage(new DefaultMessageSourceResolvable("listing.upload.couldNotParse"),
-                            LocaleContextHolder.getLocale()), file.getName()));
-        } finally {
-            try {
-                parser.close();
-            } catch (Exception ignore) {
-            }
-            try {
-                reader.close();
-            } catch (Exception ignore) {
-            }
+            throw new ValidationException(
+                    msgUtil.getMessage("listing.upload.couldNotParse", file.getName()));
         }
 
         PendingCertifiedProductResults results = new PendingCertifiedProductResults();
@@ -1140,5 +1096,66 @@ public class CertifiedProductController {
         }
 
         return certifiedProduct;
+    }
+
+    /**
+     * Creates an email message to the configured recipients
+     * with configured subject and uses the stack trace as the
+     * email body. Creates a temporary file that is the uploaded
+     * CSV and attaches it to the email.
+     * @param file
+     * @param ex
+     */
+    private void sendUploadError(final MultipartFile file, final Exception ex) {
+        //get the recipients of this email
+        //if there are none specified we won't continue
+        if (StringUtils.isEmpty(env.getProperty("uploadErrorEmailRecipients"))) {
+            return;
+        }
+        List<String> recipients = Arrays.asList(env.getProperty("uploadErrorEmailRecipients").split(","));
+
+        //figure out the filename for the attachment
+        String originalFilename = file.getOriginalFilename();
+        int indexOfExtension = originalFilename.indexOf(".");
+        String filenameWithoutExtension = file.getOriginalFilename();
+        if (indexOfExtension >= 0) {
+            filenameWithoutExtension
+            = originalFilename.substring(0, indexOfExtension);
+        }
+        String extension = ".csv";
+        if (indexOfExtension >= 0) {
+            extension = originalFilename.substring(indexOfExtension);
+        }
+
+        //attach the file the user tried to upload
+        File temp = null;
+        List<File> attachments = null;
+        try {
+            temp = File.createTempFile(filenameWithoutExtension, extension);
+            file.transferTo(temp);
+            attachments = new ArrayList<File>();
+            attachments.add(temp);
+        } catch (IOException io) {
+            LOGGER.error("Could not create temporary file for attachment: " + io.getMessage(), io);
+        }
+
+        //create the email body
+        String htmlBody = "<p>Upload attempted at " + new Date()
+                + "<br/>Uploaded by " + Util.getUsername() + "</p>";
+        StringWriter writer = new StringWriter();
+        ex.printStackTrace(new PrintWriter(writer));
+        htmlBody += "<pre>" + writer.toString() + "</pre>";
+
+        //build and send the email
+        try {
+            EmailBuilder emailBuilder = new EmailBuilder(env);
+            emailBuilder.recipients(recipients)
+            .subject(env.getProperty("uploadErrorEmailSubject"))
+            .fileAttachments(attachments)
+            .htmlMessage(htmlBody)
+            .sendEmail();
+        } catch (MessagingException msgEx) {
+            LOGGER.error("Could not send team email about failed listing upload.", msgEx);
+        }
     }
 }
